fix tiny x on mobile nav

--- a/src/components/NavigationBar/style.scss
+++ b/src/components/NavigationBar/style.scss
@@ -196,7 +196,7 @@
       right: 30px;
       top: 28px;
       height: 40px !important;
-      width: 40px !important;
+      width: 60px !important;
       color: $white;
       background-color: $black;
       cursor: pointer;
